# glui-v8

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  resources.qrc
src/Core/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
src/Ui/: Rect.h  Window.h
src/resources/: defaultConfig.json
